added amount minted

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 
     <p>Mint up to 10 EvmLoot in one transaction! (Price: FREE)</p>
+    <div id="availability" class="the_title"></div>
     <div class="operation">
       <input id="tokenId" placeholder="Enter NFT amount" value="1" />
       <button id="mint" class="bubbly-button">Mint</button>
